# gosh-transfer-linux

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATION_QT6.md  PRD.md  README.md  package-lock.json  package.json  technical_spec.md
.github/workflows/: build-flatpak.yml  build-linux-arm.yml  build-linux-cosmic.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
assets/icons/: icon.icns
crates/gosh-transfer-core/: Cargo.toml
crates/gosh-transfer-core/src/: favorites.rs  history.rs  lib.rs  settings.rs  types.rs
crates/gosh-transfer-cosmic/: Cargo.toml
crates/gosh-transfer-cosmic/src/: app.rs  config.rs  engine.rs  main.rs  message.rs
crates/gosh-transfer-cosmic/src/pages/: about.rs  mod.rs  receive.rs  send.rs  settings.rs  transfers.rs
crates/gosh-transfer-gtk/: Cargo.toml
crates/gosh-transfer-gtk/src/: application.rs  main.rs
crates/gosh-transfer-gtk/src/services/: engine_bridge.rs  mod.rs
crates/gosh-transfer-gtk/src/views/: about.rs  mod.rs  receive.rs  send.rs  settings.rs  transfers.rs
crates/gosh-transfer-gtk/src/widgets/: mod.rs
crates/gosh-transfer-gtk/src/window/: imp.rs  mod.rs
crates/gosh-transfer-qt/: CMakeLists.txt  Cargo.toml  build.rs  resources.qrc
crates/gosh-transfer-qt/cpp/: main.cpp
crates/gosh-transfer-qt/qml/: main.qml
crates/gosh-transfer-qt/rust/src/: engine_bridge.rs  lib.rs
crates/gosh-transfer-qt/rust/src/controllers/: mod.rs
crates/gosh-transfer-qt/src/: engine_bridge.rs  main.rs
crates/gosh-transfer-qt/src/qt/: bridge.rs  ui.cpp
crates/gosh-transfer-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/gosh-transfer-tauri/src/: commands.rs  engine_bridge.rs  main.rs  state.rs
data/: com.gosh.Transfer.desktop  com.gosh.Transfer.metainfo.xml
pkg/flatpak/: com.gosh.Transfer.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  server.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  index.css
src-ui/src/components/: Navigation.tsx
src-ui/src/pages/: AboutPage.tsx  ReceivePage.tsx  SendPage.tsx  SettingsPage.tsx  TransfersPage.tsx  index.ts
src-ui/src/store/: index.ts
src-ui/src/types/: index.ts
src/lib/components/: AboutView.svelte
