[workspace]
resolver = "2"
members = [
    "crates/gosh-transfer-core",
    "crates/gosh-transfer-gtk",
    "crates/gosh-transfer-qt",
    "crates/gosh-transfer-cosmic",
]

[workspace.package]
version = "2.0.3"
edition = "2021"
license = "AGPL-3.0"
authors = ["Gosh Contributors"]
repository = "https://github.com/gosh-sh/gosh-transfer"
description = "A clean, explicit file transfer application"

[workspace.dependencies]
# Core transfer engine
gosh-lan-transfer = { git = "https://github.com/goshitsarch-eng/gosh-lan-transfer" }
gosh-transfer-core = { path = "crates/gosh-transfer-core" }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
async-channel = "2.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

# GTK4 dependencies
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"

# Qt6 dependencies (cxx-qt)
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "qt_qml"] }

# libcosmic dependencies
# Note: libcosmic is from git, not crates.io
