[workspace]
resolver = "2"
members = [
    "crates/gosh-transfer-core",
    "crates/gosh-transfer-tauri",
]

[workspace.package]
version = "2.20.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Goshitsarch"]
repository = "https://github.com/goshitsarch-eng/gosh-transfer-linux"
description = "A clean, explicit file transfer application"

[workspace.dependencies]
# Core transfer engine
gosh-lan-transfer = "0.2.1"
gosh-transfer-core = { path = "crates/gosh-transfer-core" }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
async-channel = "2.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
