[package]
name = "gosh-transfer"
version = "2.0.3"
description = "A clean, explicit file transfer application"
authors = ["Gosh Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/your-org/gosh-transfer"
edition = "2021"

# LEGAL NOTICE:
# This project is NOT affiliated with Motrix or any other download manager.
# This is an independent, open-source project licensed under AGPL-3.0.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server and client
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Network utilities
local-ip-address = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hostname = "0.4"

# File handling
futures = "0.3"
futures-util = "0.3"
bytes = "1"
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
