[package]
name = "gosh-transfer-cosmic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "libcosmic frontend for Gosh Transfer"

[[bin]]
name = "gosh-transfer-cosmic"
path = "src/main.rs"

[dependencies]
# Core shared logic
gosh-transfer-core = { path = "../gosh-transfer-core" }
gosh-lan-transfer = { git = "https://github.com/goshitsarch-eng/gosh-lan-transfer" }

# libcosmic framework - using commit before a11y bug in spin_button.rs
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "f603959", default-features = false, features = [
    "tokio",
    "winit",
    "wgpu",
] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic", rev = "f603959" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hostname.workspace = true
directories.workspace = true
arboard = "3.4"
local-ip-address = "0.6"
open = "5"
