[package]
name = "gosh-transfer-qt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Qt6 Widgets frontend for Gosh Transfer"
repository.workspace = true

[[bin]]
name = "gosh-transfer-linux-qt"
path = "src/main.rs"

[dependencies]
# Workspace core

gosh-transfer-core.workspace = true
gosh-lan-transfer.workspace = true

# Async + channels

tokio.workspace = true
async-channel.workspace = true

# Utilities

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
hostname.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell = "1"

# Qt (cxx-qt)

cxx = "1"
cxx-qt = "0.7.3"
cxx-qt-lib = { version = "0.7.3" }

[build-dependencies]

cxx-qt-build = "0.7.3"

[package.metadata.deb]
maintainer = "Goshitsarch <noreply@gosh.sh>"
copyright = "2026, Goshitsarch"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Gosh Transfer is a clean, explicit file transfer application for sending \
and receiving files over local networks, Tailscale, and VPNs. Unlike \
automatic discovery tools, Gosh Transfer requires you to explicitly \
specify the recipient's IP address, giving you full control over your \
file transfers."""
section = "net"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/gosh-transfer-linux-qt", "usr/bin/", "755"],
    ["../../data/com.gosh.Transfer.desktop", "usr/share/applications/", "644"],
    ["../../data/com.gosh.Transfer.metainfo.xml", "usr/share/metainfo/", "644"],
    ["../../assets/icons/32x32.png", "usr/share/icons/hicolor/32x32/apps/com.gosh.Transfer.png", "644"],
    ["../../assets/icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/com.gosh.Transfer.png", "644"],
    ["../../assets/icons/128x128@2x.png", "usr/share/icons/hicolor/256x256/apps/com.gosh.Transfer.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gosh-transfer-linux-qt", dest = "/usr/bin/gosh-transfer-linux-qt", mode = "755" },
    { source = "data/com.gosh.Transfer.desktop", dest = "/usr/share/applications/com.gosh.Transfer.desktop", mode = "644" },
    { source = "data/com.gosh.Transfer.metainfo.xml", dest = "/usr/share/metainfo/com.gosh.Transfer.metainfo.xml", mode = "644" },
    { source = "assets/icons/32x32.png", dest = "/usr/share/icons/hicolor/32x32/apps/com.gosh.Transfer.png", mode = "644" },
    { source = "assets/icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.gosh.Transfer.png", mode = "644" },
    { source = "assets/icons/128x128@2x.png", dest = "/usr/share/icons/hicolor/256x256/apps/com.gosh.Transfer.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
qt6-qtbase = "*"
