[package]
name = "gosh-transfer-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop frontend for Gosh Transfer"

[[bin]]
name = "gosh-transfer-linux"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Core transfer engine and logic
gosh-transfer-core.workspace = true
gosh-lan-transfer.workspace = true

# Async runtime
tokio.workspace = true
async-channel.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.deb]
maintainer = "Goshitsarch <noreply@gosh.sh>"
license-file = ["../../LICENSE", "0"]
section = "net"
priority = "optional"
depends = "$auto, libwebkit2gtk-4.1-0"
assets = [
    ["target/release/gosh-transfer-linux", "usr/bin/", "755"],
    ["../../data/com.gosh.Transfer.desktop", "usr/share/applications/", "644"],
    ["../../data/com.gosh.Transfer.metainfo.xml", "usr/share/metainfo/", "644"],
    ["../../assets/icons/32x32.png", "usr/share/icons/hicolor/32x32/apps/com.gosh.Transfer.png", "644"],
    ["../../assets/icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/com.gosh.Transfer.png", "644"],
    ["../../assets/icons/128x128@2x.png", "usr/share/icons/hicolor/256x256/apps/com.gosh.Transfer.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gosh-transfer-linux", dest = "/usr/bin/gosh-transfer-linux", mode = "755" },
    { source = "data/com.gosh.Transfer.desktop", dest = "/usr/share/applications/com.gosh.Transfer.desktop", mode = "644" },
    { source = "data/com.gosh.Transfer.metainfo.xml", dest = "/usr/share/metainfo/com.gosh.Transfer.metainfo.xml", mode = "644" },
    { source = "assets/icons/32x32.png", dest = "/usr/share/icons/hicolor/32x32/apps/com.gosh.Transfer.png", mode = "644" },
    { source = "assets/icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.gosh.Transfer.png", mode = "644" },
    { source = "assets/icons/128x128@2x.png", dest = "/usr/share/icons/hicolor/256x256/apps/com.gosh.Transfer.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
webkit2gtk4.1 = "*"
